--- a/src/styles/demo.css
+++ b/src/styles/demo.css
@@ -1,5 +1,5 @@
 /**
- * These are here for the demo and will need to be broken out into seperate files*/
+ * These are here for the demo and will need to be broken out into separate files
 /*the proper components are completed.*/
 
 body .p-button {
@@ -8,12 +8,20 @@ body .p-button {
   letter-spacing: 1px;
 }
 
-body .p-button.p-button-text-only .p-button-text {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  padding: 0.25rem;
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .p-button.view-mode-toggle {
   margin: 1.2rem;
@@ -93,27 +101,45 @@ body .p-sidebar {
 }
 
 /* ListBox styles */
+/* Outer Container */
 .p-listbox.p-inputtext.p-component {
   width: 100%;
 }
 
-body .p-listbox .p-listbox-list .p-listbox-item {
-  width: 100%;
-  padding: 0;
-}
-
-body .p-listbox .p-listbox-list .p-listbox-item button {
-  margin: 0;
-}
-
-body .p-listbox .p-listbox-list .p-listbox-item button.set-active {
-  width: 70%;
-}
-
-body .p-listbox .p-listbox-list .p-listbox-item button.assign {
-  width: 25%;
-}
+/* ListItem wrapper */
 body .p-listbox .p-listbox-list-wrapper {
-  overflow-x: hidden;
-  width: 100%;
+  /*overflow-x: hidden;*/
+  /*width: 100%;*/
+}
+
+/* ListItem */
+body .p-listbox .p-listbox-list .p-listbox-item {
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+body .p-button.p-button-text-only .p-button-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
+
+/*body .p-listbox .p-listbox-list .p-listbox-item button {*/
+/*  margin: 0;*/
+/*}*/
+
+/*body .p-listbox .p-listbox-list .p-listbox-item button.set-active {*/
+/*  width: 70%;*/
+/*}*/
+
+/*body .p-listbox .p-listbox-list .p-listbox-item button.assign {*/
+/*  width: 25%;*/
+/*}*/
+
+.bumper {
+  z-index: 99;
+  position: fixed;
 }
