--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -1,28 +1,20 @@
-.timeline-view {
-  position: relative;
+.react-calendar-timeline * {
+  box-sizing: border-box;
 }
 
-.sticky {
-  position: -webkit-sticky;
-  position: sticky;
-  top: -2px;
-  z-index: 100;
-}
-
+/* Main Timeline Window */
 .react-calendar-timeline {
-  position: relative;
+  position: absolute;
+  top: 3rem;
+  border: 1px red solid;
 }
 
-.react-calendar-timeline.nudged {
-  left: 300px;
+.rct-header-root {
+  background-color: red;
+  border-bottom: 1px solid black;
 }
 
-.data-window {
-  width: 100%;
-  height: 50%;
-  border: 1px black solid;
-}
-
-.boo {
-  border: 1px solid black;
+.rct-outer {
+  overflow: hidden;
+  white-space: nowrap;
 }
