Stable all components, queries, mutations.

--- a/src/styles/list.scss
+++ b/src/styles/list.scss
@@ -1,4 +1,4 @@
-.window-list {
+.entity-list {
   border: 1px solid black;
   width: 20rem;
   height: 30rem;
@@ -9,7 +9,7 @@
   }
 }
 
-.window-list-item {
+.entity-list-item {
   display: flex;
   border-bottom: 1px solid black;
 }
